# tictacto

./: CMakeLists.txt  Makefile  README.txt  gen_neural_network.C  gen_qtables.C  index.html  main.C  qneuron.C  qneuron.h  qtable.C  qtable.h  qtables_play.C  tictacto_common.h  tictacto_games_generator.C  tictacto_games_generator.h  tictacto_qtable_generator.C  tictacto_qtable_generator.h  ttt_games_gen.C
